[gd_scene load_steps=11 format=3 uid="uid://c2csj76jxwrmf"]

[ext_resource type="Script" path="res://scripts/layout/positioner_sp.gd" id="1_m1tol"]
[ext_resource type="PackedScene" uid="uid://cpag02njdgi8x" path="res://scenes/card_slot.tscn" id="2_naq77"]
[ext_resource type="Texture2D" uid="uid://buad26cfkqy8u" path="res://resources/images/hole_1f573-fe0f.png" id="3_0o7rh"]
[ext_resource type="Texture2D" uid="uid://b6xst8hle7t4x" path="res://resources/images/hole_mask (1).png" id="4_p0i1q"]
[ext_resource type="PackedScene" uid="uid://co2evvqlgwgxx" path="res://scenes/deck.tscn" id="5_mmc2f"]
[ext_resource type="Script" path="res://scripts/layout/player_hand.gd" id="6_rqsi8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5yaot"]
size = Vector2(19, 2.11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pusrd"]
size = Vector2(12.04, 2.35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7r5cl"]
size = Vector2(12.02, 4.38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l7f58"]
size = Vector2(12.08, 8.84)

[node name="Layout" type="Node2D"]
script = ExtResource("1_m1tol")

[node name="DealerZone" type="Node2D" parent="."]
position = Vector2(960, 300)

[node name="DealerArea" type="Area2D" parent="DealerZone"]
collision_layer = 2048
collision_mask = 2048

[node name="ShapeDealer" type="CollisionShape2D" parent="DealerZone/DealerArea"]
scale = Vector2(100, 100)
shape = SubResource("RectangleShape2D_5yaot")
debug_color = Color(0, 0.6, 0.701961, 0.0980392)

[node name="CardSlots" type="Node2D" parent="DealerZone"]
position = Vector2(-960, -540)

[node name="CardSlot" parent="DealerZone/CardSlots" instance=ExtResource("2_naq77")]
position = Vector2(960, 530)
scale = Vector2(0.15, 0.15)

[node name="CardSlot2" parent="DealerZone/CardSlots" instance=ExtResource("2_naq77")]
position = Vector2(797, 530)
scale = Vector2(0.15, 0.15)

[node name="CardSlot3" parent="DealerZone/CardSlots" instance=ExtResource("2_naq77")]
position = Vector2(1120, 530)
scale = Vector2(0.15, 0.15)

[node name="DealerGraphic" type="Node2D" parent="DealerZone"]
scale = Vector2(0.4, 0.4)
metadata/_edit_group_ = true

[node name="DealerSprite" type="Sprite2D" parent="DealerZone/DealerGraphic"]
position = Vector2(0, 70)
scale = Vector2(0.966797, 0.966797)
texture = ExtResource("3_0o7rh")

[node name="DealerMask" type="Sprite2D" parent="DealerZone/DealerGraphic"]
clip_children = 1
position = Vector2(0, -96)
texture = ExtResource("4_p0i1q")
offset = Vector2(0, 160)

[node name="PlayerZone" type="Node2D" parent="."]
position = Vector2(960, 896)

[node name="PlayerArea" type="Area2D" parent="PlayerZone"]
collision_layer = 512
collision_mask = 512

[node name="ShapePlayer" type="CollisionShape2D" parent="PlayerZone/PlayerArea"]
position = Vector2(0, 64.5)
scale = Vector2(100, 100)
shape = SubResource("RectangleShape2D_pusrd")
debug_color = Color(0.32549, 0.611765, 0.352941, 0.113725)

[node name="PlayerDeck" parent="PlayerZone" instance=ExtResource("5_mmc2f")]
position = Vector2(-1164, 59)
scale = Vector2(0.15, 0.15)

[node name="DrawCooldown" type="Timer" parent="PlayerZone/PlayerDeck"]
wait_time = 0.5

[node name="PlayerHand" type="Node2D" parent="PlayerZone"]
script = ExtResource("6_rqsi8")

[node name="DroppableZone" type="Node2D" parent="PlayerZone"]
position = Vector2(2880, 2688)

[node name="DroppableArea" type="Area2D" parent="PlayerZone/DroppableZone"]
collision_layer = 4096
collision_mask = 4096

[node name="DroppableShape" type="CollisionShape2D" parent="PlayerZone/DroppableZone/DroppableArea"]
position = Vector2(-2878, -2962)
scale = Vector2(100, 100)
shape = SubResource("RectangleShape2D_7r5cl")
debug_color = Color(0.835712, 0.242512, 0.751048, 0.113725)

[node name="DragZone" type="Node2D" parent="."]
position = Vector2(1920, 1792)

[node name="DragArea" type="Area2D" parent="DragZone"]
collision_layer = 0
collision_mask = 0

[node name="ShapeDrag" type="CollisionShape2D" parent="DragZone/DragArea"]
position = Vector2(-960, -1152)
scale = Vector2(100, 100)
shape = SubResource("RectangleShape2D_l7f58")
debug_color = Color(0.32549, 0.611765, 0.352941, 0.113725)
